# megatron

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  test.sh
nanotron/: attention.py  config.py  data.py  model.py  sample.py  train.py
tests/: conftest.py  test_attention.py  test_gpt.py  test_kv_cache.py  test_model.py  test_rope.py
