[project]
name = "nanotron"
version = "0.1.0"
description = "Jax based nano transformers"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "jax[cuda12]>=0.4.30",
    "jaxlib>=0.4.30",
    "datasets",
    "einops",
    "equinox",
    "jaxtyping",
    "optax",
    "simple-parsing",
    "typer"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    "ipython",
    "ipdb",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.ruff.lint]
# F722/F821: jaxtyping uses string-based shape annotations that ruff cannot parse.
# These are false positives — the annotations are valid at runtime via jaxtyping.
ignore = ["F722", "F821"]

[tool.uv]
# Pin cuBLAS to 12.4.x — cuBLAS 12.0 (the jax 0.4.x default) has a cuBLAS bug
# (CUBLAS_STATUS_INVALID_VALUE) for matrix multiplications with K >= 1024 when
# mixed with the CUDA 12.9 runtime libraries on this machine.  12.4 resolves
# this without requiring a newer GPU driver (525.85.12 / CUDA 12.0 is sufficient).
override-dependencies = ["nvidia-cublas-cu12==12.4.5.8"]
